# cryptowedding

./: .gitignore  README.md
backend/cryptopriest/: Cargo.toml
backend/cryptopriest/src/: main.rs
contracts/: multisig.sol
front end/: index.html
frontend/: Readme.md  index.html
frontend/css/: app.css  crypto.css  crypto_test.css  form.css
frontend/js/: app.js  form.js  myscripts.js  stickUp.js  submit.js
